--- a/tests/sync-auto-test/run.sh.template
+++ b/tests/sync-auto-test/run.sh.template
@@ -1,6 +1,6 @@
 #!/bin/bash
 
-export PYTHONPATH=$PYTHONPATH:/home/jye/seafile-relate/lib/python2.7/site-packages
+export PYTHONPATH=
 
 case $1 in
     "test")
